--- a/apps/api/wrangler.jsonc
+++ b/apps/api/wrangler.jsonc
@@ -2,7 +2,13 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "api",
   "main": "src/index.ts",
-  "compatibility_date": "2026-01-16"
+  "compatibility_date": "2026-01-16",
+  "observability": {
+    "logs": {
+      "enabled": true,
+      "invocation_logs": true
+    }
+  }
   // "compatibility_flags": [
   //   "nodejs_compat"
   // ],
