--- a/apps/api/wrangler.jsonc
+++ b/apps/api/wrangler.jsonc
@@ -9,6 +9,9 @@
       "invocation_logs": true
     }
   }
+  // Note: Supabase environment variables are loaded from .env during deployment
+  // For local development, you can use wrangler.toml with [vars] section
+  // or set them via: wrangler secret put SUPABASE_URL, etc.
   // "compatibility_flags": [
   //   "nodejs_compat"
   // ],
