--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@trigger.dev/build": "4.3.2",
     "husky": "^9.1.7",
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2"
+  },
+  "dependencies": {
+    "@trigger.dev/sdk": "4.3.2"
   }
 }
