feat: resend init, still to add domain envs...

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ SUPABASE_URL="https://your-project-ref.supabase.co"
 SUPABASE_ANON_KEY="your-anon-key-here"
 SUPABASE_SERVICE_ROLE_KEY="your-service-role-key-here"
 SUPABASE_PROJECT_REF="your-project-ref"
+
+# Resend Configuration (Email Service)
+# Get your API key from: https://resend.com/api-keys
+RESEND_KEY="re_your-api-key-here"
