--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
     "hono": "^4.11.4",
-    "picocolors": "^1.1.1"
+    "picocolors": "^1.1.1",
+    "resend": "^6.8.0"
   },
   "devDependencies": {
     "wrangler": "^4.4.0"
